# SeqSim

./: .gitignore  LICENSE  pyproject.toml  readme.md  setup.cfg  setup.py  simulation.py  test  test.py
GUI/: __init__.py  gui.py  scenarios.py
Scenarios/: Environemnt_History.py  __init__.py  epistasis.py  liver_transplant.py  multiple_compartments.py  recreate_dataset.py  sequence_tags.py  simple_sim.py  virus_passaging.py
Scenarios/settings_files/: VirusPassagin_2comp  VirusPassaging_2comp
SeqSimEvo/: __init__.py  binary_fission.py  haplotype.py  population.py  sequence.py  simulation.py  simulation_settings.py
SeqSimEvo/GUI/: __init__.py  gui.py  scenarios.py
SeqSimEvo/Scenarios/: __init__.py  multiple_compartments.py  recreate_dataset.py  simple_sim.py  virus_passaging.py
SeqSimEvo/scenarios/: __init__.py  peyolution.py  simple_sim.py  virus_passaging.py
SeqSimEvo/scenarios/settings_files/: RecreateDataset_KeeleLi  SimpleSim_template  VirusPassaging_HIVLTE  VirusPassaging_control  VirusPassaging_template
SeqSimEvo/simulation_settings/: HCV  HIV  HIV_ben_leth  HIV_neutral  phix174  phix174_extreme  small  template
Tests/: population_test.py  sequence_test.py  simulation_test.py
seq_sim/: __init__.py  population.py  recreate_dataset.py  simulation.py  test.py
seq_sim/simulation_settings/: phix174
sim_scripts/: Environemnt_History.py  gui.py  multi_compartments.py  multiple_compartments.py  recreate_dataset.py  scenarios.py  sequence_tags.py  simple_sim.py  simulate_transmission.py  transmissiontree.py  virus_passaging.py
sim_scripts/settings_files/: MultipleCompartments_template  RecreateDataset_template  VirusPassaging_control  control  li_keele_samples  recreate_dataset  short_samples  template
simulation_settings/: phix174  template
