[metadata]
name = SeqSimEvo
version = 0.3.0.dev0
author = Eva Bons
author_email = eva.bons@gmail.com
description = Simulation of sequence evolution with selection.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires =
    matplotlib
    numpy
    scipy
    appJar
    pyyaml
    tqdm

[options.package_data]
SeqSimEvo = simulation_settings/*, Scenarios/settings_files/*

[options.entry_points]
console_scripts =
    SeqSimEvo_gui = SeqSimEvo.GUI:gui_run
    SeqSimEvo_multipleCompartments = SeqSimEvo.Scenarios:multiple_compartments.main
    SeqSimEvo_recreateDataset = SeqSimEvo.Scenarios:recreate_dataset.main
    SeqSimEvo_simpleSim = SeqSimEvo.Scenarios:simple_sim.main
    SeqSimEvo_passageSim = SeqSimEvo.Scenarios:virus_passaging.main
