[metadata]
name = SeqSimEvo
version = 0.3.0.dev0
author = Eva Bons, Nicolas Ochsner
author_email = eva.bons@gmail.com, nicolas.ochsner@env.ethz.ch
description = Simulation of sequence evolution with selection.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires =
    matplotlib
    numpy
    scipy
    pandas
    pyyaml
    tqdm

[options.package_data]
SeqSimEvo = simulation_settings/*, Scenarios/settings_files/*

[options.entry_points]
console_scripts =
    SeqSimEvo_multipleCompartments = SeqSimEvo.scenarios:multiple_compartments.main
    SeqSimEvo_recreateDataset = SeqSimEvo.scenarios:recreate_dataset.main
    SeqSimEvo_simpleSim = SeqSimEvo.scenarios:simple_sim.main
    SeqSimEvo_passageSim = SeqSimEvo.scenarios:virus_passaging.main
    SeqSimEvo_peyolution = SeqSimEvo.scenarios:peyolution.entry
